--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,5 +14,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Check Github User
+      run: 
+        git --version
+        git config user.name 'byterui'
+        git config user.email 'shirui_yj133@163.com'
+        git config user.name
+        git config user.email
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
     - name: Build the Docker image
       run: docker compose build
